fix spacing of PIN dialog

--- a/styles/components/BluetoothModal.module.less
+++ b/styles/components/BluetoothModal.module.less
@@ -24,8 +24,7 @@
 
 .title {
   composes: small bold from '../core/typography.module.less';
-  padding-top: 10px;
-  padding-bottom: 5px;
+  padding: 10px 10px 5px 10px;
 }
 
 .text {
@@ -50,7 +49,8 @@
 
 .textInputWrapper {
   composes: boxFlex from '../core/layout.module.less';
-  margin-bottom: 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .textInput {
